# sdr-go

./: .gitignore  App.tsx  Justfile  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json  turbo.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/analyzer/: AndroidManifest.xml
android/app/src/fm/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/sdrgo/: MainActivity.kt  MainApplication.kt  SdrModule.kt  SdrPackage.kt  UsbPermissionManager.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: usb_device_filter.xml
apps/air/: package.json
apps/analyzer/: App.tsx  app.json  index.js  package.json
apps/analyzer/src/screens/: AdsbScreen.tsx  AirBandScreen.tsx  AnalyzerScreen.tsx  FmScreen.tsx  HomeScreen.tsx  NoaaScreen.tsx  SettingsScreen.tsx
apps/fm/: App.tsx  app.json  index.js  package.json  sdrgo_fm_radio_interactive_mockup.html
apps/fm/src/components/: EqSheet.tsx  RotaryDial.tsx  SignalMeter.tsx  Toast.tsx  WaveformVisual.tsx
apps/fm/src/dev/: logger.ts
apps/fm/src/screens/: RadioScreen.tsx  SettingsScreen.tsx
apps/ham/: package.json
apps/noaa/: package.json
docs/: network-service-layer.md
ios/: Podfile
ios/sdrgo.xcodeproj/: project.pbxproj
ios/sdrgo.xcodeproj/xcshareddata/xcschemes/: sdrgo.xcscheme
ios/sdrgo.xcworkspace/: contents.xcworkspacedata
rust/: Cargo.toml
rust/sdr_core/: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SDR_TRANSITION_STRATEGY.md
rust/sdr_core/.cargo/: config.toml
rust/sdr_core/src/: README.md  lib.rs  service.rs
rust/sdr_core/src/dsp/: agc.rs  defaults.rs  eq.rs  fft.rs  filters.rs  filters.test.rs  fm.rs  mod.rs  rds.rs  utils.rs  window.rs
rust/sdr_core/src/pipeline/: am.rs  ddc.rs  filters.rs  fm.rs  manager.rs  mod.rs  spectrum.rs
rust/sdr_core/src/usb/: device.rs  hardware.rs  mod.rs  stream.rs
rust/sdr_jni/: Cargo.toml  README.md
rust/sdr_jni/src/: lib.rs
rust/sdr_srv/: Cargo.toml  README.md  config.toml  sdr_srv_client.html
rust/sdr_srv/src/: main.rs  routes.rs  settings.rs  ws.rs
scripts/: build-flavor.sh  build-rust.sh
src/modules/: SdrModule.ts
