[package]
name = "sdr_core"
version = "0.1.0"
edition = "2024"
description = "Modular, high-performance SDR signal processing library for Android"
repository = "https://github.com/kenttleton/sdr-core"
license = "MIT OR Apache-2.0"
keywords = ["sdr", "rtl-sdr", "android", "signal-processing", "radio"]
categories = ["embedded", "science"]
readme = "README.md"

[lib]
name = "sdr_core"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
libusb1-sys = "0.7"
rtl-sdr-rs = { version = "0.3", features = ["rtl_sdr_blog"] }
num-complex = "0.4"
rustfft = "6"
log = "0.4"
android_logger = "0.14"
parking_lot = "0.12"
thiserror = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
