[package]
name = "sdr_core"
version = "0.1.0"
edition = "2024"
description = "Modular, high-performance SDR signal processing library"
repository = "https://github.com/kenttleton/sdr-core"
license = "MIT OR Apache-2.0"
keywords = ["sdr", "rtl-sdr", "signal-processing", "radio"]
categories = ["science"]
readme = "README.md"

[features]
# Enables USB device enumeration (Linux, macOS, Windows).
# On Android: do not enable — libusb enumeration is unavailable there; use the
#             FileDescriptor/android_fd path instead (built in on unix targets).
# On Windows: this is the only available open path — FileDescriptor requires Unix.
#             Install Zadig (https://zadig.akeo.ie) to replace the RTL-SDR driver
#             with WinUSB or libusbK before use.
enumerate = []

[dependencies]
libusb1-sys = "0.7"
rtl-sdr-rs = { version = "0.3", features = ["rtl_sdr_blog"] }
num-complex = "0.4"
rustfft = "6"
log = "0.4"
parking_lot = "0.12"
thiserror = "1"
futuredsp = "0.0.9"
