[package]
name = "sdr_jni"
version = "0.1.0"
edition = "2024"
description = "Thin JNI wrapper exposing sdr_core to Android"

[lib]
name = "sdr_core"
crate-type = ["cdylib"]

[dependencies]
sdr_core = { path = "../sdr_core" }
jni = "0.21"
android_logger = "0.14"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
num-complex = "0.4"
