[package]
name = "sdr_srv"
version = "0.1.0"
edition = "2024"
description = "Network service exposing sdr_core over HTTP/WebSocket"

[[bin]]
name = "sdr_srv"
path = "src/main.rs"

[dependencies]
sdr_core = { path = "../sdr_core", features = ["enumerate"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
num-complex = "0.4"
config = { version = "0.14", features = ["toml"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
